RESOLVED FIXED56574
Dealloc'ing a WKView can leave a stale reference to it in NSWindow
https://bugs.webkit.org/show_bug.cgi?id=56574
Summary Dealloc'ing a WKView can leave a stale reference to it in NSWindow
John Sullivan
Reported 2011-03-17 10:49:19 PDT
WKView is setting itself as the window's _growBoxOwner in an override of _updateGrowBoxForWindowFrameChange, but isn't clearing it at any point. NSWindow doesn't retain/release its growBoxOwner, so this can lead to a bad object ref in NSWindow that results in crashes.
Attachments
Patch to clear growBoxOwner at the appropriate time. (1.70 KB, patch)
2011-03-17 10:53 PDT, John Sullivan
aroben: review+
John Sullivan
Comment 1 2011-03-17 10:53:29 PDT
Created attachment 86069 [details] Patch to clear growBoxOwner at the appropriate time.
John Sullivan
Comment 2 2011-03-17 11:41:43 PDT
Note You need to log in before you can comment on or make changes to this bug.