https://bugs.webkit.org/show_bug.cgi?id=56574 Dealloc'ing a WKView can leave a stale reference to it in NSWindow

Reviewed by Adam Roben.

* UIProcess/API/mac/WKView.mm:
(-[WKView viewWillMoveToWindow:]):
Clear the outgoing window's growBoxOwner if it is this view.



Canonical link: https://commits.webkit.org/71246@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81372 268f45cc-cd09-0410-ab3c-d52691b4dbfc